# robotframework-excellibrary

./: README.rst  pyproject.toml
ExcelLibrary/: ExcelLibrary.py  __init__.py  version.py
Tests/acceptance/: ExcelRobotTest.robot
doc/: ChangeLog.txt  ExcelLibrary-KeywordDocumentation.html
