#!/usr/bin/env python

#  Copyright 2013-2014 NaviNet Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-excellibrary"
description = "Robot Framework test library for opening, reading, writing and saving Excel files"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Wanmikitbok Siangshai"}, {name = "Simon McMorran"}, {name = "jyrkiwahlstedt"}, 
  {email = "wanmi59@protonmail.com"}, {email = "smcmorran@navinet.net"}
]
maintainers = [
  {name = "Wanmikitbok Siangshai", email = "wanmi59@protonmail.com"}
]
keywords = ["robotframework", "testing", "testautomation", "excel"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
]
dependencies = [
    "robotframework >= 3.1.0",
    "xlutils >= 2.0.0",
    "natsort >= 8.1.0"
]
dynamic = ["version"]

[project.urls]
url = "https://github.com/wanmi59/robotframework-excellibrary"

[tool.setuptools]
packages = ["ExcelLibrary"]
platforms = ["any"]

[tool.setuptools.dynamic]
version = {attr = "ExcelLibrary.version.VERSION"}
